--- a/what-is-this.html
+++ b/what-is-this.html
@@ -1,35 +1,26 @@
----
-layout: post
-title:  "What is this?"
----
-
-Hi there. I'm [Steve](http://steveklabnik.com). `/me waves`. Metaphysics.io is,
+<p>Hi there. I'm <a href="http://steveklabnik.com">Steve</a>. <code>/me waves</code>. Metaphysics.io is,
 in short, a project of mine to consider the possibilities of an intersection
-between philosophy and technology.
-
-It's important to understand what exactly I mean by 'philosophy' here, though.
-I am deeply inspired by ["What is
-philosophy?"](http://www.amazon.com/What-Is-Philosophy-Gilles-Deleuze/dp/0231079893)
+between philosophy and technology.</p>
+<p>It's important to understand what exactly I mean by 'philosophy' here, though.
+I am deeply inspired by <a href="http://www.amazon.com/What-Is-Philosophy-Gilles-Deleuze/dp/0231079893">"What is
+philosophy?"</a>
 by Gilles Deleuze and Félix Guattari. In the book, they posit definitions for
 three disciplines: art, science, and philosophy. Many a blog post has been
 written about programming, and its relationship to art and science. "Is
 programming art?" "Is programming science?" In the past, I have been deeply
 interested in these questions. But this is a place for the third, slightly
-modified: "What does a philosophy of technology look like?"
-
-Note that I say "a philosophy," not "the philosophy." This is very deliberate.
-You see, D&G have a definition of philosophy that is radically different than
+modified: "What does a philosophy of technology look like?"</p>
+<p>Note that I say "a philosophy," not "the philosophy." This is very deliberate.
+You see, D&amp;G have a definition of philosophy that is radically different than
 many others. To them, and to me, "philosophy is the discipline that involves
 creating concepts." And concepts are not measured by their 'truth value,'
 whatever that means, but by how much they can get you to think. By the
-additional perspective they offer. By how many times you go "Oh, **that** is
-interesting..." and reconsider something you thought you previously knew.
-
-While "the creation of concepts" makes for a good slogan, _how_ does one create
-a concept? Concepts are created through two other things: a **plane**, and a
-**conceptual persona**.
-
-The 'plane of immanence' is the whole second chapter of the book, and there's
+additional perspective they offer. By how many times you go "Oh, <strong>that</strong> is
+interesting..." and reconsider something you thought you previously knew.</p>
+<p>While "the creation of concepts" makes for a good slogan, <em>how</em> does one create
+a concept? Concepts are created through two other things: a <strong>plane</strong>, and a
+<strong>conceptual persona</strong>.</p>
+<p>The 'plane of immanence' is the whole second chapter of the book, and there's
 an evocative image early on in the chapter: "The plane is like a desert that
 concepts populate without dividing up. The only regions of the plane are
 concepts themselves, but the plane is all that holds them together. The plane
@@ -41,9 +32,8 @@ immanent, not transcendent, but I personally like to visualize it as a
 mathematical plane, rather than a desert: it's a surface, that extends
 infinitely, in all directions. This plane is one of Deleuze's primary
 metaphysical concepts, but for our purposes, just think of it as this infinite
-surface.
-
-Next, the conceptual persona. There are two quotes that I think are relevant to
+surface.</p>
+<p>Next, the conceptual persona. There are two quotes that I think are relevant to
 give you an idea of what personae are. The first: "Conceptual personae
 constitute points of view according to which planes of immanence are
 distinguished from one another or brought together, but they also constitute
@@ -53,20 +43,18 @@ On this plane, concepts are grouped together, and it's the persona who does
 this grouping. I visualize this as a filter: if the plane is infinite, and
 there are concepts placed all over it, the persona filters out the concepts
 that it has created. This is another way of phrasing the "point of view" which
-"distinguishes" "concepts of the same group."
-
-The second quote is "The conceptual persona is not the philosopher's
+"distinguishes" "concepts of the same group."</p>
+<p>The second quote is "The conceptual persona is not the philosopher's
 representative but, rather, the reverse: the philosopher is only the envelope
 of his principal conceptual persona." We often think about a persona as a role
 played by a person, as though the person is 'real' and the persona is 'fake.' A
-persona is something external that you temporarily inhabit. As D&G say, this is
-actually the reverse: a philosopher is inhabited _by_ a persona. And sometimes
-more.
-
-Finally, the concept itself. A concept is more than just a simple 'idea.' A
+persona is something external that you temporarily inhabit. As D&amp;G say, this is
+actually the reverse: a philosopher is inhabited <em>by</em> a persona. And sometimes
+more.</p>
+<p>Finally, the concept itself. A concept is more than just a simple 'idea.' A
 concept is put in relation to a specific problem, and in relation with other
 concepts. This relations are due to their proximity to each other on the plane.
-I want to say that they form a mesh, but that's a little too coherent. D&G
+I want to say that they form a mesh, but that's a little too coherent. D&amp;G
 describe this influence not as a correspondence, but as a vibration. Two
 different vibrations can resonate with one another. If these vibrations are
 sound, they can sound harmonic, or sound discordant. Two concepts aren't so
@@ -76,17 +64,15 @@ together, it's a binary relation: they're either linked or they're not. But two
 vibrations can harmonize in different ways. Take a wonderful harmonic chord,
 and add an additional member, and you may get a new chord, or you may get
 dissonance. Furthermore, your ear may prefer different chords and harmonies
-than mine.
-
-Anyway, when creating a new concept, a persona may survey the plane, and see
+than mine.</p>
+<p>Anyway, when creating a new concept, a persona may survey the plane, and see
 other persona's concepts. Their new concept may just end up resonating with
-another persona's existing one. Or, the existing concept may be _almost_ what
+another persona's existing one. Or, the existing concept may be <em>almost</em> what
 they want, and so they'll copy it, tweak things, and make it their own. It's
 often useful to see the world from another persona's point of view. It can be
-the spark that inspires you to forge something that's entirely different.
-
-So, in a longer sense, `metaphysics.io` is my little plane, on which my persona
+the spark that inspires you to forge something that's entirely different.</p>
+<p>So, in a longer sense, <code>metaphysics.io</code> is my little plane, on which my persona
 will be placing some concepts. Some will be fully formed, and others will be
 more tentative. It's my hope that they may give you some interesting
 perspectives, show you some new harmonies, cause you to create your own
-concepts.
+concepts.</p>
