--- a/what-is-this.html
+++ b/what-is-this.html
@@ -1,3 +1,8 @@
+---
+layout: post
+title:  "What is this?"
+---
+
 <p>Hi there. I'm <a href="http://steveklabnik.com">Steve</a>. <code>/me waves</code>. Metaphysics.io is,
 in short, a project of mine to consider the possibilities of an intersection
 between philosophy and technology.</p>
