lets not bold that
i'm bolding terms, so let's em for emphasis.

--- a/what-is-this.html
+++ b/what-is-this.html
@@ -20,7 +20,7 @@ You see, D&amp;G have a definition of philosophy that is radically different tha
 many others. To them, and to me, "philosophy is the discipline that involves
 creating concepts." And concepts are not measured by their 'truth value,'
 whatever that means, but by how much they can get you to think. By the
-additional perspective they offer. By how many times you go "Oh, <strong>that</strong> is
+additional perspective they offer. By how many times you go "Oh, <em>that</em> is
 interesting..." and reconsider something you thought you previously knew.</p>
 <p>While "the creation of concepts" makes for a good slogan, <em>how</em> does one create
 a concept? Concepts are created through two other things: a <strong>plane</strong>, and a
