Fix up some CSS.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 layout: default
 title: Metaphysics.io
 ---
-<a href="/what-is-this.html">What is this?</a>
-
 <h2>Concepts</h2>
 
 <ul>
@@ -11,3 +9,6 @@ title: Metaphysics.io
     <li><a href="{{ post.url }}">{{ post.title }}</a></li>
   {% endfor %}
 </ul>
+
+<p><a href="/what-is-this.html">What is this?</a></p>
+
