--- a/what-is-this.html
+++ b/what-is-this.html
@@ -79,5 +79,5 @@ the spark that inspires you to forge something that's entirely different.</p>
 <p>So, in a longer sense, <code>metaphysics.io</code> is my little plane, on which my persona
 will be placing some concepts. Some will be fully formed, and others will be
 more tentative. It's my hope that they may give you some interesting
-perspectives, show you some new harmonies, cause you to create your own
+perspectives, show you some new harmonies, and cause you to create your own
 concepts.</p>
